# newsfetcher

./: .env.example  .gitignore  Makefile  README.md  railway.toml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_extensions.py  0002_tenancy_skeleton.py  0003_source_registry.py  0004_observability_jobs.py  0005_phase2_tenancy_monitoring.py  0006_phase3_articles.py  0007_phase4_matching.py  0008_phase5_semantic.py  0009_phase6_reports.py  0010_phase7_epaper.py  0011_phase8_source_closure.py  0012_phase9_logos.py  0013_phase10_social.py
apps/api/app/: main.py
apps/api/app/api/: auth.py  dashboard.py  entities.py  epaper.py  health.py  ingestion.py  logos.py  matches.py  reports.py  semantic.py  social.py  sources.py
apps/api/app/core/: arabic.py  config.py  deps.py  logging.py  observability.py  security.py
apps/api/app/data/: PHASE8_SOURCE_CLOSURE_MATRIX.yaml
apps/api/app/db/: run_assessments.py  seed.py  seed_data.py  session.py
apps/api/app/models/: __init__.py  articles.py  enums.py  epaper.py  logos.py  matching.py  monitoring.py  observability.py  reports.py  semantic.py  social.py  sources.py  tenancy.py  users.py
apps/api/app/scripts/: __init__.py  run_demo_scrape.py
apps/api/app/services/: ai_enrichment.py  article_fetch.py  audit.py  dashboard.py  demo_scrape.py  email_delivery.py  embeddings.py  epaper.py  ingestion.py  ingestion_pipeline.py  llm.py  logo_detection.py  logos.py  matching.py  ocr.py  (+14 more)
apps/api/tests/: test_arabic_normalize.py  test_article_fetch.py  test_config.py  test_dashboard_jobs.py  test_db_seed_integration.py  test_embeddings_local.py  test_epaper_pipeline.py  test_health.py  test_ingestion_gates.py  test_llm.py  test_logo_pipeline.py  test_match_inbox_isolation.py  test_matching_corpus.py  test_no_live_scrape.py  test_pdf_report.py  test_phase8_source_closure.py  test_relevance_classifier.py  test_reports_pipeline.py  test_seed_inventory.py  test_semantic_pipeline.py  test_social_pipeline.py  test_tenant_isolation.py
(+63 files in other folders)
