[project]
name = "newsfetcher-api"
version = "0.1.0"
description = "Kuwait media-monitoring SaaS API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.6",
  "redis>=5.2.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.28.0",
  "python-json-logger>=3.2.0",
  "sentry-sdk[fastapi]>=2.19.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "boto3>=1.35.0",
  "reportlab>=4.2.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.12",
  "pyyaml>=6.0.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0,<4.1",
  "PyJWT>=2.9.0",
  "email-validator>=2.2.0",
  "newsfetcher-connectors",
  "playwright>=1.49.0",
]

[tool.uv.sources]
newsfetcher-connectors = { path = "../../packages/connectors", editable = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = []
mypy_path = "."
packages = ["app"]

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "newsfetcher_connectors.*",
  "yaml",
  "passlib.*",
  "reportlab.*",
  "boto3.*",
  "botocore.*",
  "pypdf.*",
]
ignore_missing_imports = true
